app/components/marginals/titlebar/titlebar.module.css
.marginal {
	height: 7.5vh;
	width: 90vw;
	display: flex;
	align-items: center;
}

.icon {
	display: flex;
	align-items: center;
	margin-left: 10px;
	margin-right: 10px;
	color: var(--font-color-dull);
	cursor: pointer;
	transition: 0.1s all;
	padding-top: 5px;
	padding-bottom: 5px;
}

.title {
	font-size: 30px;
	padding-right: 10px;
	text-decoration: none;
	color: var(--font-color);
	transition: 0.25s;
}

.title:active {
	color: var(--font-color);
}

.icon:hover {
	color: var(--font-color);
}
.icon:active {
	color: var(--font-color-dull);
}

.dropdown {
	position: absolute;
	font-size: 20px;
	border-radius: 10px;
	background-color: var(--darker-bg-color);
	padding: 10px;
	display: none;
	color: var(--font-color);
}

.options {
	text-decoration: none;
}

.option:hover .dropdown {
	display: block;
}

.session {
	transition: all 0.1s;
	font-size: 20px;
	background-color: var(--darker-bg-color);
	border-radius: 1000px;
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	margin-top: 5px;
	margin-bottom: 5px;
	display: flex;
	align-items: center;
	height: 4vh;
}

.sessionName {
	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: 7px;
}

.sessionIcon {
	display: flex;
	align-items: center;
	flex-direction: row;
	padding-left: 5px;
}

.sessionDropdown {
	cursor: pointer;
	position: absolute;
	font-size: 17.5px;
	background-color: var(--darker-bg-color);
	padding: 15px;
	border-radius: 15px;
	display: none;
	padding: 15px;
	z-index: 10;
}

.sessionWrapper:hover .sessionDropdown {
	display: block;
}

.sessionSelectionWrapper {
	background-color: var(--bg-color);
	padding: 10px;
	padding-top: 5px;
	padding-bottom: 5px;
	margin: 5px;
	margin-top: 8px;
	margin-bottom: 8px;
	border-radius: 10px;
	display: flex;
	align-items: center;
	flex-direction: row;
	justify-content: space-between;
	transition: all 0.1s;
}
.selected {
	background-color: var(--highlight-color);
	color: var(--bg-color);
}

.trash {
	transition: all 0.1s;
	padding-top: 5px;
	padding-left: 20px;
	cursor: pointer;
}
.trash:hover {
	color: var(--error-color);
}
.trash:active {
	color: var(--font-color);
}
.edit {
	transition: all 0.1s;
	padding-top: 5px;
	padding-left: 20px;
	cursor: pointer;
}
.edit:hover {
	color: var(--green-color);
}
.edit:active {
	color: var(--bg-color);
}
.check {
	transition: all 0.1s;
	padding-top: 5px;
	padding-left: 20px;
	cursor: pointer;
}
.check:hover {
	color: var(--green-color);
}
.check:active {
	color: var(--bg-color);
}
.xButton {
	transition: all 0.1s;
	padding-top: 5px;
	padding-left: 20px;
	cursor: pointer;
}
.xButton:hover {
	color: var(--error-color);
}
.xButton:active {
	color: var(--font-color);
}

.label {
	color: var(--font-color-dull);
}

.inputBox {
	background-color: var(--bg-color);
	padding: 10px;
	padding-top: 5px;
	padding-bottom: 5px;
	margin: 5px;
	margin-top: 8px;
	margin-bottom: 8px;
	border-radius: 10px;
	border: none;
	font-family: inherit;
}

.newSessionSection {
	display: inline-block;
	width: 100%;
	display: flex;
	justify-content: center;
}

.inputBox {
	flex-grow: 1;
	color: var(--font-color);
}
.inputBox:focus {
	outline: 1px solid var(--highlight-color);
}

.active {
	color: var(--highlight-color) !important;
}

.addSessionButton {
	height: 50px;
	width: 50px;
	background: none;
	border: none;
	cursor: pointer;
	font-size: 40px;
	color: var(--font-color-dull);
}
.addSessionButton:hover {
	color: var(--font-color);
}
.addSessionButton:active {
	color: var(--font-color);
}

.disclaimer {
	color: var(--font-color-dull);
	display: inline-block;
	width: 40vw;
	padding-top: 3vh;
}
.disclaimer * {
	color: var(--font-color);
}

